# HSA-DPO

./: .gitignore  README.md  hsa_dpo_train.sh  pyproject.toml
hsa_dpo/models/llava-v1_5/: train_dpo.py
hsa_dpo/trainer/: base_dpo_trainer.py  llava_dpo_trainer.py
inference/: README.md  inference_example.ipynb  inference_example.py
